syntax = "proto3";
package sirs.grpc;

message UploadRequest {
    string name = 1;
    bytes file = 2;
    bytes signature = 3;
    string owner = 4;
}

message UploadResponse {
    int32 version = 1;
}

message DownloadRequest {
    string name = 1;
}

message DownloadResponse {
    bytes file = 1;
    bytes signature = 2;
    bytes certificate = 3;
    string lastModifier = 4;
    int32 version = 5;
    string owner = 6;
}

message RegisterRequest {
    string username = 1;
    bytes certificate = 2;
}

message RegisterResponse {
}

message NumberRequest {
    string username = 1;
}

message NumberResponse {
    string number = 1;
}

message TokenRequest {
    string username = 1;
    bytes number = 2;
}

message TokenResponse {
    string token = 1;
    repeated string invite = 2;
}

message ShareRequest {
    string user = 1;
}

message ShareResponse {
    bytes certificate = 1;
}

message InviteRequest {
    string user = 1;
    string file = 2;
    bytes key = 3;
}

message InviteResponse {
}

message AcceptRequest {
    string file = 1;
}

message AcceptResponse {
    bytes key = 1;
}

message RemoveRequest {
    string file = 1;
    string user = 2;
}

message RemoveResponse {
    message User {
        string username = 1;
        bytes certificate = 2;
    }
    repeated User user = 1;
}

service Remote {
    rpc upload(UploadRequest) returns (UploadResponse);
    rpc Download(DownloadRequest) returns (DownloadResponse);
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc GetNumber(NumberRequest) returns (NumberResponse);
    rpc GetToken(TokenRequest) returns (TokenResponse);
    rpc Share(ShareRequest) returns (ShareResponse);
    rpc Invite(InviteRequest) returns (InviteResponse);
    rpc Accept(AcceptRequest) returns (AcceptResponse);
    rpc Remove(RemoveRequest) returns (RemoveResponse);
}
